--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  padding: 0px;
 }
 
 .row {
@@ -40,6 +41,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  margin: 0px;
 }
 
 .past {
